Changed to java 8 and started running junit tests for downloaded code